syntax = "proto3";

package message_service.chats.v1;

option go_package = "api/message_service/chats/v1;chatsv1";

import "message_service/chats/v1/chat.proto";

message AddChatRequest {
  Chat chat = 1;
}
