syntax = "proto3";

package message_service.chats.v1;

option go_package = "api/message_service/chats/v1;chatsv1";

import "message_service/chats/v1/add_chat.proto";
import "message_service/chats/v1/get_chats.proto";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";


service ChatService {
  // Добавляет новый чат
  rpc AddChat(AddChatRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/chats"
      body: "*"
    };
  }

  // Получает список чатов
  rpc GetChats(GetChatsRequest) returns (GetChatsResponse) {
    option (google.api.http) = {
      get: "/v1/chats"
    };
  }
}